// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColResponsive > should match a snapshot and render children with no props 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-col"
  >
    <p>
      I am child
    </p>
  </div>
</DocumentFragment>
`;

exports[`ColResponsive > should render with the correct classNames when supplied all props 1`] = `
<DocumentFragment>
  <div
    class="el-span1 el-offset1 el-col"
  >
    <p>
      I am child
    </p>
  </div>
</DocumentFragment>
`;

exports[`GridResponsive > hould render with the correct classNames when supplied all props 1`] = `
<DocumentFragment>
  <div
    class="el-col-gap3 el-row-gap3 el-grid"
  >
    <p>
      I am child
    </p>
  </div>
</DocumentFragment>
`;

exports[`GridResponsive > should match a snapshot and render children with no props 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-grid"
  >
    <p>
      I am child
    </p>
  </div>
</DocumentFragment>
`;
